src/assets/base-styles.css
@import 'tailwindcss';

@plugin 'daisyui' {
  themes: fantasy --default, dark --prefersdark;
}

@plugin "daisyui/theme" {
  name: "dark";
  default: false;
  prefersdark: true;
  color-scheme: "dark";
  --color-base-100: oklch(12% 0.042 264.695);
  --color-base-200: oklch(20% 0.042 265.755);
  --color-base-300: oklch(27% 0.041 260.031);
  --color-base-content: oklch(96% 0.007 247.896);
  --color-primary: oklch(43% 0.218 303.724);
  --color-primary-content: oklch(97% 0.014 308.299);
  --color-secondary: oklch(39% 0.195 277.366);
  --color-secondary-content: oklch(96% 0.015 12.422);
  --color-accent: oklch(55% 0.027 264.364);
  --color-accent-content: oklch(98% 0.002 247.839);
  --color-neutral: oklch(37% 0.044 257.287);
  --color-neutral-content: oklch(98% 0.003 247.858);
  --color-info: oklch(44% 0.11 240.79);
  --color-info-content: oklch(97% 0.013 236.62);
  --color-success: oklch(72% 0.219 149.579);
  --color-success-content: oklch(98% 0.018 155.826);
  --color-warning: oklch(79% 0.184 86.047);
  --color-warning-content: oklch(98% 0.026 102.212);
  --color-error: oklch(64% 0.246 16.439);
  --color-error-content: oklch(96% 0.015 12.422);
  --radius-selector: 1rem;
  --radius-field: 1rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 1;
  --noise: 0;
}


@plugin "daisyui/theme" {
  name: "fantasy";
  default: false;
  prefersdark: false;
  color-scheme: "light";
  --color-base-100: oklch(100% 0 0);
  --color-base-200: oklch(93% 0 0);
  --color-base-300: oklch(86% 0 0);
  --color-base-content: oklch(27.807% 0.029 256.847);
  --color-primary: oklch(37.45% 0.189 325.02);
  --color-primary-content: oklch(87.49% 0.037 325.02);
  --color-secondary: oklch(45% 0.24 277.023);
  --color-secondary-content: oklch(90.784% 0.032 241.36);
  --color-accent: oklch(75.98% 0.204 56.72);
  --color-accent-content: oklch(15.196% 0.04 56.72);
  --color-neutral: oklch(27.807% 0.029 256.847);
  --color-neutral-content: oklch(85.561% 0.005 256.847);
  --color-info: oklch(82% 0.111 230.318);
  --color-info-content: oklch(0% 0 0);
  --color-success: oklch(64.8% 0.15 160);
  --color-success-content: oklch(0% 0 0);
  --color-warning: oklch(84.71% 0.199 83.87);
  --color-warning-content: oklch(0% 0 0);
  --color-error: oklch(71.76% 0.221 22.18);
  --color-error-content: oklch(0% 0 0);
  --radius-selector: 1rem;
  --radius-field: 1rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 1;
  --noise: 0;
}



/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.
*/
@layer base {

  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }
}

@layer base {
  html {
    @apply overflow-hidden;
  }

  h1,
  h2,
  h3,
  h4 {
    @apply font-bold leading-loose my-4;
  }

  h1 {
    @apply text-3xl;
  }

  h2 {
    @apply text-2xl;
  }

  h3 {
    @apply text-xl;
  }

  h4 {
    @apply text-lg;
  }

  p {
    @apply mb-2;
  }
}

.fade-enter-active,
.fade-leave-active {
  transition: all 0.25s ease;
}

.fade-enter-from {
  opacity: 0;
  transform: translateY(10px);
}

.fade-leave-to {
  opacity: 0;
  transform: translateY(-10px);
}

